# app/routes/__init__.py
@@ -3,7 +3,7 @@ from app.controllers import (IndexView, EmployeeView, EmployeeDetailView,
       TaskView, TaskDetailView, ConsultantView, ConsultantDetailView,
       SaleView, SaleDetailView, CourseView, CourseDetailView, AccountView,
       AccountDetailView, BusinessView, BusinessDetailView, UserView,
-      UserDetailView)
+      UserDetailView, TicketView, TicketDetailView)
 
 
 
@@ -35,3 +35,6 @@ api.add_resource(BusinessDetailView, '/businesses/<int:business_id>')
 # users
 api.add_resource(UserView, '/users', endpoint='users')
 api.add_resource(UserDetailView, '/users/<int:user_id>')
+# tickets
+api.add_resource(TicketView, '/tickets', endpoint='tickets')
+api.add_resource(TicketDetailView, '/tickets/<int:ticket_id>')
